src/test/ui/attributes/extented-attribute-macro-error.stderr
error: couldn't read $DIR/../not_existing_file.md: No such file or directory (os error 2)
  --> $DIR/extented-attribute-macro-error.rs:2:10
   |
LL | #![doc = include_str!("../not_existing_file.md")]
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `include_str` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

